plugins {
    id 'java'
}

group = 'de.yoyosource'
version = '1.0-SNAPSHOT'

sourceCompatibility = "23.PREVIEW"
targetCompatibility = "23.PREVIEW"

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
}

test {
    useJUnitPlatform()
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}
